# Akassebricks

./: CMakeLists.txt  app_main.cpp  sdkconfig
assets/: assets.cpp  assets.h  title_image.cpp
core/: audio.cpp  audio.h  graphics.h  input.cpp  input.h  persist.cpp  persist.h
game/: ball.cpp  ball.h  config.h  game.cpp  game.h  paddle.cpp  paddle.h  powerup.cpp
lib/: audio.c  expander.c  sdcard.c  sdcard.h
main/: CMakeLists.txt  app_main.cpp
main/assets/: assets.cpp
main/core/: audio.cpp  audio.h  graphics.cpp  graphics.h  graphics_basic.h  i18n.cpp  i18n.h  input.cpp  sdcard.cpp  settings.cpp  settings.h  sprite_atlas.cpp
main/game/: game.cpp  game.h  level.cpp  level.h  level_editor.cpp  paddle.cpp  powerup.h
main/ui/: highscores.cpp  highscores.h  hud.cpp  menu.cpp  menu.h  title_screen.cpp
ui/: highscores.cpp  highscores.h  title_screen.cpp
